--- a/PMDM/T2/app/src/main/res/values/strings.xml
+++ b/PMDM/T2/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
         <item>Usuario</item>
         <item>Invitado</item>
     </string-array>
+    <string-array name="generos">
+        <item>Todos</item>
+        <item>Masculino</item>
+        <item>Femenino</item>
+    </string-array>
 </resources>
