--- a/PMDM/curso2425/T2/Seleccion/app/src/main/res/values/strings.xml
+++ b/PMDM/curso2425/T2/Seleccion/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Seleccion</string>
+    <string-array name="marcas">
+        <item>Mercedes</item>
+        <item>Audi</item>
+        <item>VW</item>
+        <item>Ford</item>
+        <item>Fiat</item>
+    </string-array>
+
 </resources>
